--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,14 @@
 {
-    "version": 2,
     "builds": [
       {
-        "src": "bin/www",
+        "src": "/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/bin/www"
+        "dest": "/index.js"
       }
     ]
   }
-  
