--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.11"
