--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/bin/www" }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.17.1"
+    }
+  }
 }
