--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "bin/www", "use": "@vercel/node" }
+    {
+      "src": "/index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/bin/www" }
-  ],
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.17.1"
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
-  }
+  ]
 }
