--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "morgan": "~1.9.1",
+    "redis": "^4.6.15",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
