--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "connect-redis": "^7.1.1",
+    "connect-sqlite3": "^0.9.15",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
