--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
+    "ioredis": "^5.4.1",
     "morgan": "~1.9.1",
     "redis": "^4.6.15",
     "sqlite3": "^5.1.7"
