--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.4",
     "body-parser": "^1.20.2",
     "connect-redis": "^7.1.1",
     "connect-sqlite3": "^0.9.15",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "ioredis": "^5.4.1",
     "morgan": "~1.9.1",
     "redis": "^4.6.15",
+    "session-store": "^0.0.6",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
