--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "ioredis": "^5.4.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.15",
     "session-store": "^0.0.6",
     "sqlite3": "^5.1.7"
