--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.15",
     "session-store": "^0.0.6",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "transliterate": "^1.0.1",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.8",
