--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.15",
+    "serve-favicon": "^2.5.0",
     "session-store": "^0.0.6",
     "sqlite3": "^5.1.7",
     "transliterate": "^1.0.1",
