--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
+    "googleapis": "^140.0.1",
     "ioredis": "^5.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "redis": "^4.6.15",
     "serve-favicon": "^2.5.0",
     "session-store": "^0.0.6",
