update npm packages

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "~4.16.1",
+    "express": "^4.21.1",
     "express-session": "^1.18.0",
     "googleapis": "^140.0.1",
     "ioredis": "^5.4.1",
@@ -23,10 +23,11 @@
     "nodemailer": "^6.9.14",
     "redis": "^4.6.15",
     "serve-favicon": "^2.5.0",
-    "session-store": "^0.0.6",
+    "session-store": "^0.0.3",
     "sqlite3": "^5.1.7",
     "transliterate": "^1.0.1",
-    "transliteration": "^2.3.5"
+    "transliteration": "^2.3.5",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.8",
