--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,18 +1,23 @@
-# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
+# .github/workflows/fly-deploy.yml
+name: Deploy to Fly.io
 
-name: Fly Deploy
 on:
   push:
     branches:
-      - main
+      - main  # or the branch you want to deploy from
+
 jobs:
   deploy:
-    name: Deploy app
     runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Set up Fly.io
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
+      - name: Deploy to Fly.io
+        run: flyctl deploy --config ./fly.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
