added discord bot

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-sqlite3": "^0.9.15",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
